# ELMA

./: .directory  AUTHORS  CMakeLists.txt  LICENSE  README.md
projects/: CMakeLists.txt
projects/AnalyzerAdsorptionIsotherm/: AnalyzerAdsorptionIsotherm.h  CMakeLists.txt  mainAnalyzerAdsorptionIsotherm.cpp
projects/AnalyzerHeatCapacity/: AnalyzerHeatCapacity.h  CMakeLists.txt  FeatureWangLandauNextNeighborAdaptiveWindow.h  mainAnalyzerHeatCapacity.cpp
projects/Example4/: .Example4.cpp.kate-swp  CMakeLists.txt  Example4.cpp
projects/LinearChain/: .CalcRg2.cpp.kate-swp  CMakeLists.txt  CalcRg2.cpp  CalcRg2Cos.cpp  CoSolvency.cpp  LinearChain.cpp
projects/SimpleSimulatorNextNeighborInteraction/: CMakeLists.txt  mainSimpleSimulatorNextNeighborInteraction.cpp
projects/SimpleSimulatorStandard/: CMakeLists.txt  mainSimpleSimulatorStandard.cpp
projects/WangLandauSimulatorNextNeighbor/: CMakeLists.txt  FeatureWangLandauNextNeighbor.h  UpdaterAdaptiveWangLandauSamplingNextNeighbor.h  mainWangLandauSimulatorNextNeighbor.cpp
projects/WangLandauSimulatorNextNeighborSimulationRun/: CMakeLists.txt  FeatureWangLandauNextNeighborAdaptiveWindowSimulationRun.h  ReadInHGLnDOS.h  UpdaterAdaptiveWangLandauSamplingNextNeighborAdaptiveWindowSimulationRun.h  mainWangLandauSimulatorNextNeighborAdaptiveWindowSimulationRun.cpp
updater/: AnalyzerRadiusOfGyrationAttr.h  Analyzer_ChainWalking_RG2.h  UpdaterAddCosolvent.h
utility/: Histogram1D.h  HistogramGeneralStatistik1D.h  StatisticMoment.h
