cmake_minimum_required (VERSION 2.8)

add_subdirectory(SimpleSimulatorStandard)

add_subdirectory(SimpleSimulatorNextNeighborInteraction)

add_subdirectory(Example4)

add_subdirectory(LinearChain)

add_subdirectory(WangLandauSimulatorNextNeighbor)

add_subdirectory(WangLandauSimulatorNextNeighborSimulationRun)




add_subdirectory(AnalyzerHeatCapacity)

add_subdirectory(AnalyzerAdsorptionIsotherm)

